[gd_scene load_steps=2 format=3 uid="uid://cfoyk6y3t328l"]

[ext_resource type="Script" path="res://scripts/user_interface.gd" id="1_lwj8h"]

[node name="UserInterface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_lwj8h")

[node name="FPSLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 856.0
offset_top = 872.0
offset_right = 896.0
offset_bottom = 895.0
text = "0 "

[node name="BuildTowerButtons" type="Node" parent="."]

[node name="ArcherTowerButton" type="Button" parent="BuildTowerButtons"]
unique_name_in_owner = true
offset_left = 8.0
offset_top = 48.0
offset_right = 136.0
offset_bottom = 102.0
text = "Archer Tower
$0"

[node name="FireballTowerButton" type="Button" parent="BuildTowerButtons"]
unique_name_in_owner = true
offset_left = 8.0
offset_top = 112.0
offset_right = 136.0
offset_bottom = 166.0
text = "Fireball Tower
$0"

[node name="ZapTowerButton" type="Button" parent="BuildTowerButtons"]
unique_name_in_owner = true
offset_left = 8.0
offset_top = 176.0
offset_right = 136.0
offset_bottom = 230.0
text = "Zap Tower
$0"

[node name="StartWaveButton" type="Button" parent="."]
layout_mode = 0
offset_left = 624.0
offset_top = 8.0
offset_right = 792.0
offset_bottom = 39.0
text = "Start Wave 1"

[node name="WaveLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 816.0
offset_top = 8.0
offset_right = 888.0
offset_bottom = 40.0
text = "Wave 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MoneyLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 136.0
offset_bottom = 31.0
text = "$0"

[node name="Panel" type="Panel" parent="."]
layout_mode = 2
offset_left = 664.0
offset_top = 88.0
offset_right = 880.0
offset_bottom = 440.0

[node name="TowerType" type="Label" parent="Panel"]
layout_mode = 2
offset_right = 208.0
offset_bottom = 32.0
text = "Tower"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TowerLevel" type="Label" parent="Panel"]
layout_mode = 0
offset_top = 24.0
offset_right = 208.0
offset_bottom = 48.0
theme_override_font_sizes/font_size = 12
text = "Level: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UpgradeButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 40.0
offset_top = 56.0
offset_right = 168.0
offset_bottom = 110.0
text = "Upgrade
$0"

[node name="SellButton" type="Button" parent="Panel"]
offset_left = 40.0
offset_top = 120.0
offset_right = 168.0
offset_bottom = 174.0
text = "Sell
$0"

[node name="NextUpgradeHeader" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 48.0
offset_top = 184.0
offset_right = 160.0
offset_bottom = 207.0
text = "Next Upgrade"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Underline" type="ColorRect" parent="Panel"]
layout_mode = 0
offset_left = 48.0
offset_top = 208.0
offset_right = 160.0
offset_bottom = 209.0

[node name="UpgradeDescriptions" type="Control" parent="Panel"]
anchors_preset = 0
offset_left = 16.0
offset_top = 208.0
offset_right = 192.0
offset_bottom = 267.0

[node name="UpgradeDescription1" type="Label" parent="Panel/UpgradeDescriptions"]
layout_mode = 2
offset_top = 8.0
offset_right = 176.0
offset_bottom = 25.0
theme_override_colors/font_color = Color(0, 0.498039, 0, 1)
theme_override_font_sizes/font_size = 12
text = "1: Description"
horizontal_alignment = 1

[node name="UpgradeDescription2" type="Label" parent="Panel/UpgradeDescriptions"]
layout_mode = 2
offset_top = 32.0
offset_right = 176.0
offset_bottom = 49.0
theme_override_colors/font_color = Color(0, 0.498039, 0, 1)
theme_override_font_sizes/font_size = 12
text = "2: Description"
horizontal_alignment = 1

[node name="UpgradeDescription3" type="Label" parent="Panel/UpgradeDescriptions"]
layout_mode = 2
offset_top = 56.0
offset_right = 176.0
offset_bottom = 73.0
theme_override_colors/font_color = Color(0, 0.498039, 0, 1)
theme_override_font_sizes/font_size = 12
text = "3: Description"
horizontal_alignment = 1

[node name="UpgradeDescription4" type="Label" parent="Panel/UpgradeDescriptions"]
layout_mode = 0
offset_top = 80.0
offset_right = 176.0
offset_bottom = 97.0
theme_override_colors/font_color = Color(0, 0.498039, 0, 1)
theme_override_font_sizes/font_size = 12
text = "4: Description"
horizontal_alignment = 1
